--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "type-check": "tsc --noEmit",
-    "prepare": "husky"
+    "prepare": "husky",
+    "commit": "node scripts/auto-commit.js",
+    "commit:ps": "powershell -ExecutionPolicy Bypass -File scripts/auto-commit.ps1",
+    "commit:no-push": "powershell -ExecutionPolicy Bypass -File scripts/auto-commit.ps1 -NoPush",
+    "save": "npm run format && npm run lint && npm run commit:ps",
+    "save:no-push": "npm run format && npm run lint && npm run commit:no-push"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.42.4",
