--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "save:no-push": "npm run format && npm run lint && npm run commit:no-push"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@supabase/supabase-js": "^2.42.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
