feat: Implement drag-and-drop task reordering in SidebarTree (Prompt 018)
- Add @dnd-kit/core, @dnd-kit/sortable, and @dnd-kit/utilities for drag-and-drop
- Implement SortableTaskNode component with drag handles ( icon)
- Add DndContext and SortableContext for drag-and-drop functionality
- Create reorderTasks and reorderTasksById functions in TaskContext
- Add visual feedback with DragOverlay component during dragging
- Implement drag start/end handlers with proper state management
- Add smooth animations and transitions for better UX
- Include tooltips and visual indicators for draggable areas
- Support keyboard navigation for accessibility
- Add activation constraints to prevent accidental drags
- Maintain hierarchy and group functionality during reordering

--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "save:no-push": "npm run format && npm run lint && npm run commit:no-push"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@heroicons/react": "^2.2.0",
     "@supabase/supabase-js": "^2.42.4",
     "react": "^18.2.0",
