--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "jspdf": "^3.0.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-resizable-panels": "^3.0.3",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
