--- a/package.json
+++ b/package.json
@@ -17,51 +17,56 @@
     "commit:no-push": "powershell -ExecutionPolicy Bypass -File scripts/auto-commit.ps1 -NoPush",
     "save": "npm run format && npm run lint && npm run commit:ps",
     "save:no-push": "npm run format && npm run lint && npm run commit:no-push",
-    "qa:console": "start-server-and-test dev http://localhost:5173/ \"playwright test\""
+    "qa:console": "start-server-and-test dev http://localhost:5173/ \"playwright test\"",
+    "update:latest": "npx npm-check-updates -u && npm install",
+    "dev:latest": "npm run update:latest && npm run dev",
+    "check:updates": "npx npm-check-updates",
+    "clean:start": "rm -rf node_modules && npm install && npm run dev"
   },
   "dependencies": {
-    "@constructbms/ui": "*",
-    "@constructbms/types": "*",
     "@constructbms/sdk": "*",
+    "@constructbms/types": "*",
+    "@constructbms/ui": "*",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@heroicons/react": "^2.2.0",
-    "@supabase/supabase-js": "^2.42.4",
+    "@supabase/supabase-js": "^2.55.0",
+    "@tailwindcss/postcss": "^4.1.11",
     "chart.js": "^4.5.0",
     "d3": "^7.9.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
-    "react": "^18.3.1",
+    "react": "latest",
     "react-chartjs-2": "^5.3.0",
     "react-color": "^2.19.3",
-    "react-dom": "^18.3.1",
+    "react-dom": "latest",
     "react-quill": "^2.0.0",
-    "react-resizable-panels": "^3.0.3",
-    "react-router-dom": "^6.22.3",
+    "react-resizable-panels": "^3.0.4",
+    "react-router-dom": "^7.8.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@eslint/js": "^9.32.0",
+    "@eslint/js": "^9.33.0",
     "@playwright/test": "^1.54.2",
-    "@typescript-eslint/eslint-plugin": "^8.38.0",
-    "@typescript-eslint/parser": "^8.38.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.15",
-    "eslint": "^9.32.0",
+    "@typescript-eslint/eslint-plugin": "^8.39.1",
+    "@typescript-eslint/parser": "^8.39.1",
+    "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.3",
+    "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "husky": "^9.1.7",
-    "lint-staged": "^16.1.2",
-    "postcss": "^8.4.24",
+    "lint-staged": "^16.1.5",
+    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "start-server-and-test": "^2.0.13",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.17",
     "terser": "^5.43.1",
-    "vite": "^5.2.0"
+    "vite": "latest"
   },
   "lint-staged": {
     "*.{js,jsx}": [
