--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "react-quill": "^2.0.0",
     "react-resizable-panels": "^3.0.4",
     "react-router-dom": "^7.8.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
