--- a/.github/workflows/ensure-prompt-tag.yml
+++ b/.github/workflows/ensure-prompt-tag.yml
@@ -8,10 +8,13 @@ jobs:
       - name: Validate commit message
         run: |
           MSG="$(git log -1 --pretty=%B)"
+          echo "Checking commit message: $MSG"
           if ! echo "$MSG" | grep -Eiq 'Prompt[[:space:]]+[0-9]+'; then
             echo "::warning::Head commit lacks 'Prompt ###' tag. Appending automatically."
             git config user.name "PromptTag Bot"
             git config user.email "prompt-bot@users.noreply.github.com"
             git commit --allow-empty -m "Prompt AUTO-TAG: (append) — previous: $MSG"
             git push
+          else
+            echo "✅ Commit message already contains Prompt tag"
           fi
